Opened 10 years ago
Closed 10 years ago
#5565 closed defect (fixed)
Reading some tiff images fails with "max resync size reached, could not find sync byte" error
| Reported by: | Arnaud | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mpegts tif probe regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
% ffprobe bug_tiff.tif
ffprobe version N-80012-g95b20ad Copyright (c) 2007-2016 the FFmpeg developers
built with gcc 4.8 (Ubuntu 4.8.4-2ubuntu1~14.04)
configuration: --enable-shared --disable-static --enable-zlib --enable-memalign-hack --disable-optimizations --disable-mmx --disable-stripping --extra-cflags=-g --extra-ldflags=-g --disable-encoder=jpeg2000 --disable-decoder=jpeg2000 --disable-doc
libavutil 55. 24.100 / 55. 24.100
libavcodec 57. 42.100 / 57. 42.100
libavformat 57. 36.100 / 57. 36.100
libavdevice 57. 0.101 / 57. 0.101
libavfilter 6. 45.100 / 6. 45.100
libswscale 4. 1.100 / 4. 1.100
libswresample 2. 0.101 / 2. 0.101
[mpegts @ 0x806aa30] max resync size reached, could not find sync byte
Last message repeated 25 times
Latest git: ffprobe version N-80012-g95b20ad Copyright (c) 2007-2016 the FFmpeg developers
I was able to reproduce the problem with ffmpeg versions up to 2.5.
Doesn't work with ffmpeg -i either.
I'm not sure why ffmpeg needs to go through mpegts.c and more particularly mpegts_resync function: since this is a simple image file, I believe there should be no need to sync anything.
I think the image is correct though since I can open it with other software (GIMP, etc.) without any error.
Attachments (1)
Change History (7)
by , 10 years ago
| Attachment: | bug_tiff.tif.tar.bz2 added |
|---|
comment:1 by , 10 years ago
| Keywords: | mpegts tif regression added; tiff removed |
|---|---|
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
comment:2 by , 10 years ago
For future tickets: Please remember not to provide ffprobe output for issues that are reproducible with ffmpeg.
comment:3 by , 10 years ago
Regression since 296cd9c432775bbf57867fd76e8d2f505a512569 related to ticket #3939.
comment:4 by , 10 years ago
| Keywords: | probe added |
|---|
comment:5 by , 10 years ago
Thanks a lot for the quick answer :)
I wasn't able to exactly git revert commit 296cd9c432775bbf57867fd76e8d2f505a512569 because that fails, but after reverting it manually, the tiff file is now working again.
However I'm curious to know was is wrong here and how both bugs could be fixed (since obviously reverting the change will break again the problematic ts file).
Maybe something like:
return FFMAX(FFMAX((stat_all - 10*best_score)/10, 0), best_score - best_score2);
may do the trick, but I'm not sure since I don't know exactly what this code is doing.
At least it's working for my tiff file, but I haven't tested it with the ts file (not sure where to get it).
comment:6 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



tiff image not working